initial commit for PWA update

--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,9 @@
 		rel="stylesheet">
 	<!-- Font Awesome icons (free version)-->
 	<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+
+	<!-- PWA MANIFEST -->
+	<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 </head>
 
 <body data-sveltekit-preload-data="hover">
