--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,7 @@
 
 	<!-- PWA MANIFEST -->
 	<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+	<meta name="theme-color" content="#172651" />
 </head>
 
 <body data-sveltekit-preload-data="hover">
